# linkml-initializer

./: .gitmodules  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .dockeringnore  Dockerfile  pyproject.toml
backend/linkml_initializer_backend/: main.py  workspace.py
backend/tests/: test_linkml_initializer_backend.py
frontend/: .dockerignore  .eslintrc.js  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  schema.json  types.json  utils.js
frontend/src/components/: AddClassForm.jsx  AddEnumForm.jsx  AddSlotForm.jsx  Layout.jsx  ProjectDetailsForm.jsx  ProjectDownload.jsx  SchemaEditor.jsx
frontend/src/routes/: Edit.jsx  Root.jsx
schema/: workspace.yaml
