[tool.poetry]
name = "linkml-initializer-backend"
version = "0.1.0"
description = ""
authors = ["Patrick Kalita <pkalita@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
install = "^1.3.5"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
linkml = { path = "../../linkml", develop = true }
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
